[project]
name = "comfyui-jdcn"
description = "ComfyUI-JDCN, Custom Utility Nodes for Artists, Designers and Animators."
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["piexif"]

[project.urls]
Repository = "https://github.com/daxcay/ComfyUI-JDCN"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "daxcay"
DisplayName = "ComfyUI-JDCN"
Icon = "https://raw.githubusercontent.com/daxcay/ComfyUI-JDCN/main/web/assets/img/logo.png"
